--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/logo.ico">
+    <link rel="icon" href="https://aiknvm.hn.ss.bfcplatform.vn/aiknvm/Asset/logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aiknvm Trả lời mọi câu hỏi của bạn</title>
   </head>
